#198 add support for -XX:+UseShenandoahGC - XX:+PrintGCDetails